--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -4,8 +4,10 @@
   "private": true,
   "dependencies": {
     "@shadcn/ui": "^0.0.4",
+    "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-responsive-carousel": "^3.2.23",
