Added form spree in contact , blood stock now getting updated and minor changes

--- a/frontend/my-app/package.json
+++ b/frontend/my-app/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@formspree/react": "^2.5.1",
     "@shadcn/ui": "^0.0.4",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
