--- a/demo/demo/src/main/resources/application.properties
+++ b/demo/demo/src/main/resources/application.properties
@@ -13,7 +13,7 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
 spring.mail.username=bloodprism25@gmail.com
-spring.mail.password=Bloodprism@123
+spring.mail.password=fxxrggbdzswxdwew
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.default-encoding=UTF-8
